[gd_scene load_steps=13 format=2]

[ext_resource path="res://weapons/hammer/hammer.gd" type="Script" id=1]
[ext_resource path="res://sounds/sword-swish-1.wav" type="AudioStream" id=2]
[ext_resource path="res://weapons/hammer/swipe_left_hammer.png" type="Texture" id=3]
[ext_resource path="res://weapons/hammer/swipe_right_hammer.png" type="Texture" id=4]
[ext_resource path="res://weapons/hammer/swipe_up_hammer.png" type="Texture" id=5]
[ext_resource path="res://weapons/hammer/swipe_down_hammer.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 19.6131, 18.8898 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 19.7392, 20.2154 )

[sub_resource type="Animation" id=3]

resource_name = "down"
length = 0.2
loop = false
step = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("sprite_down:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hitbox_down:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("sound")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("sprite_down:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.08 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=4]

length = 0.2
loop = false
step = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("sprite_left:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hitbox_left:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("sound")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("sprite_left:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.08 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=5]

length = 0.2
loop = false
step = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("sprite_right:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hitbox_right:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("sound")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("sprite_right:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.08 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[sub_resource type="Animation" id=6]

resource_name = "up"
length = 0.2
loop = false
step = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("sprite_up:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hitbox_up:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("sound")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("sprite_up:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.08 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="hammer" type="Node2D" index="0"]

script = ExtResource( 1 )
DAMAGE = 4
KNOCKBACK = 3000

[node name="sound" type="AudioStreamPlayer" parent="." index="0"]

stream = ExtResource( 2 )
volume_db = -20.0
autoplay = false
mix_target = 0
bus = "fx"

[node name="sprite_left" type="Sprite" parent="." index="1"]

visible = false
position = Vector2( -43, 0 )
scale = Vector2( 5, 5 )
texture = ExtResource( 3 )
vframes = 2
hframes = 2
frame = 1
_sections_unfolded = [ "Animation", "Transform", "Visibility" ]

[node name="sprite_right" type="Sprite" parent="." index="2"]

position = Vector2( 48, 0 )
scale = Vector2( 5, 5 )
texture = ExtResource( 4 )
vframes = 2
hframes = 2
frame = 1
_sections_unfolded = [ "Animation", "Offset", "Transform", "Z Index" ]

[node name="sprite_up" type="Sprite" parent="." index="3"]

position = Vector2( 0, -60 )
scale = Vector2( 5, 5 )
texture = ExtResource( 5 )
vframes = 2
hframes = 2
frame = 1
_sections_unfolded = [ "Animation", "Transform", "Z Index" ]

[node name="sprite_down" type="Sprite" parent="." index="4"]

position = Vector2( 0, 16 )
scale = Vector2( 5, 5 )
texture = ExtResource( 6 )
offset = Vector2( 0, 7 )
vframes = 2
hframes = 2
frame = 2
_sections_unfolded = [ "Animation", "Offset", "Transform", "Z Index" ]

[node name="hitbox_left" type="Area2D" parent="." index="5"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitoring = false
monitorable = false
collision_layer = 2
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Transform" ]

[node name="left" type="CollisionShape2D" parent="hitbox_left" index="0"]

position = Vector2( -32.6744, 0 )
scale = Vector2( 1.68084, 1.05877 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="hitbox_right" type="Area2D" parent="." index="6"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitorable = false
collision_layer = 2
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Transform" ]

[node name="right" type="CollisionShape2D" parent="hitbox_right" index="0"]

position = Vector2( 33.4038, 0 )
scale = Vector2( 1.75886, 1.05877 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="hitbox_up" type="Area2D" parent="." index="7"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitorable = false
collision_layer = 2
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="up" type="CollisionShape2D" parent="hitbox_up" index="0"]

position = Vector2( 0, -38.9713 )
scale = Vector2( 1.01321, 1.92258 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="hitbox_down" type="Area2D" parent="." index="8"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitorable = false
collision_layer = 2
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Transform" ]

[node name="down" type="CollisionShape2D" parent="hitbox_down" index="0"]

position = Vector2( 0, 36.6234 )
scale = Vector2( 1, 1.7958 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="anim_player" type="AnimationPlayer" parent="." index="9"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/down = SubResource( 3 )
anims/left = SubResource( 4 )
anims/right = SubResource( 5 )
anims/up = SubResource( 6 )
blend_times = [  ]

[connection signal="body_entered" from="hitbox_left" to="." method="_on_body_entered"]

[connection signal="body_entered" from="hitbox_right" to="." method="_on_body_entered"]

[connection signal="body_entered" from="hitbox_up" to="." method="_on_body_entered"]

[connection signal="body_entered" from="hitbox_down" to="." method="_on_body_entered"]


